<resources>
    <string name="app_name">Countries</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="country_name">Country name</string>
    <string name="country_capital">Country capital</string>
    <string name="country_region">Country region</string>
    <string name="country_currency">Country currency</string>
    <string name="country_language">Country language</string>
    <string name="region">Region</string>
    <string name="error_found">ERROR FOUND!</string>
</resources>