<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.DetailFragment">


        <ImageView
            android:id="@+id/countryImage"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="15dp"/>


        <TextView
            android:id="@+id/countryName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/countryImage"
            android:layout_centerInParent="true"
            android:layout_marginTop="10dp"
            android:text="@string/country_name"
            android:textColor="@color/black"
            android:textSize="26sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/countryCapital"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/countryName"
            android:layout_centerInParent="true"
            android:layout_marginTop="10dp"
            android:text="@string/country_capital"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/countryRegion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/countryCapital"
            android:layout_centerInParent="true"
            android:layout_marginTop="10dp"
            android:text="@string/country_region"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/countryCurrency"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/countryRegion"
            android:layout_centerInParent="true"
            android:layout_marginTop="10dp"
            android:text="@string/country_currency"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/countryLanguage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/countryCurrency"
            android:layout_centerInParent="true"
            android:layout_marginTop="10dp"
            android:text="@string/country_language"
            android:textColor="@color/black"
            android:textSize="20sp" />



    </RelativeLayout>
</layout>